--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
+    implementation 'me.relex:circleindicator:2.1.6'
 
 }
 
